--- a/index.html
+++ b/index.html
@@ -5,9 +5,12 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Currency Converter</title>
   <link rel="stylesheet" href="style.css">
-  <script src="script.js" async></script>
 </head>
 <body>
-
+  <div class=".container">
+    <label for="amount">USD</label>
+    <input type="number" id="amount">
+  </div>
+  <script src="script.js" async></script>
 </body>
 </html>
