two drop downs appearing but no connection.

--- a/index.html
+++ b/index.html
@@ -4,13 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Currency Converter</title>
+  <script src="script.js" async></script>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <div class=".container">
-    <label for="amount">USD</label>
-    <input type="number" id="amount">
+  <div class="container">
+    <h2>Currency Converter</h2>
   </div>
-  <script src="script.js" async></script>
 </body>
 </html>
